--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ color:white;
     align-items: center;  
     margin: 10px 0 0 0 ;     
     width: 100%;
-    font-size: 45px;
+    font-size: 48px;
     gap:30px;
 }
 
@@ -677,26 +677,31 @@ color:white;
     overflow: hidden;
     flex-direction: column;
     margin: 50px  0 0 0; 
-    font-size: 20px;
+    font-size: 15px;
     border: 1px solid #D7D7D7;
     border-radius: 35px;
-    padding: 40px;
-    width: 430px;
+    padding: 30px;
+    width: 350px;
 }
 .password .some{
     display: flex;
     gap:10px;
 }
 .password .displayLogin{
-    margin-top:3px;
+    margin-top:0px;
+    font-size:17px;
 }
 .password h3{
     margin: 0 0 20px 0px;
-    font-size: 25px;
+    font-size: 17px;
     font-weight: 300;
+    display: flex;
+    text-align: center;
+    align-items: center;
 }
+
 .password p{
-    font-size: 18px;
+    font-size: 15px;
     color:gray;
     margin: 0px 0 25px 0;
 }
@@ -721,7 +726,7 @@ color:white;
     border:2px solid  #0070ff;
 }
 .password a{
-    font-size: 17px;
+    font-size: 15px;
     text-decoration: none;
     color:#0070ff;
 }
@@ -732,7 +737,7 @@ color:white;
     width: 100%;
     margin: 20px 0 20px  0;
     padding: 15px 0 15px 0;
-    font-size: 17px;
+    font-size: 15px;
     border-radius: 10px;
     background: #D7D7D7;
     border:none;
